# IronCalc

./: API_PARITY_FINAL_REPORT.md  API_PARITY_MATRIX.md  API_PARITY_SOLUTION.md  ENFORCEMENT_SYSTEM_SUMMARY.md  FINAL_SUMMARY.md  HOOKS_UPDATED.md  Makefile  Makefile.api-parity  PARITY_REPORT.md  README.md  api-parity-config.json  api_parity_check.py  comprehensive_parity_test.py  python_api_test.py  test_parity.py
.github/workflows/: api-parity-check.yml
base/: Cargo.toml
base/src/: actions.rs  lib.rs  model.rs  types.rs
base/src/functions/: date_and_time.rs  financial.rs  lookup_and_reference.rs  mathematical.rs  mod.rs  statistical.rs  text.rs  util.rs  xlookup.rs
base/src/test/: mod.rs  test_actions.rs  test_ceiling_floor.rs  test_date_and_time.rs  test_degrees_radians.rs  test_fn_accrint.rs  test_fn_address.rs  test_fn_avedev.rs  test_fn_ceiling_floor.rs  test_fn_combin.rs  test_fn_combina.rs  test_fn_correl.rs  test_fn_coupon.rs  test_fn_covariance.rs  test_fn_datevalue_datedif.rs  test_fn_devsq.rs  test_fn_discount_bonds.rs  test_fn_duration.rs  test_fn_even_odd.rs  test_fn_exp.rs  test_fn_fact.rs  test_fn_factdouble.rs  (+41 more)
bindings/wasm/: Cargo.toml  README.pkg.md  fix_types.py  types.ts
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: test.mjs
docs/: API_PARITY_ENFORCEMENT.md
scripts/: enforce_api_parity.py  pre-commit-api-parity.sh
src/test/: test_percentile.rs  test_percentrank.rs
xlsx/: hello-calc.xlsx  hello-styles.xlsx  widths-and-heights.xlsx
xlsx/examples/: hello_calc.rs  hello_styles.rs  widths_and_heights.rs
xlsx/tests/: test.rs
(+67 files in other folders)
