[package]
name = "wasm"
version = "0.5.0"
authors = ["Nicolas Hatcher <nicolas@theuniverse.today>"]
description = "IronCalc Web bindings"
license = "MIT/Apache-2.0"
repository = "https://github.com/ironcalc/ironcalc"
edition = "2021"

[lib]
name = "ironcalc_wasm"
crate-type = ["cdylib"]

[[bin]]
name = "xlsx_wasm"
path = "src/xlsx.rs"

[dependencies]
ironcalc = { path = "../../xlsx", version = "0.5.0" }
ironcalc_base = { path = "../../base", version = "0.5", features = ["use_regex_lite", "single_threaded"] }
wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.38"